# pytest-allure3-uploader

./: README.md  pyproject.toml
pytest_allure3_uploader/: __init__.py  client.py  plugin.py
