[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-allure3-uploader"
version = "0.1.0"
description = "Upload allure-results to allure3-docker-service"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28"
]

[project.entry-points.pytest11]
allure_uploader = "pytest_allure3_uploader.plugin"
